fix: se corrigieron los puntos que devolvian el Pull request